--- a/src/style.css
+++ b/src/style.css
@@ -32,20 +32,20 @@ body {
 }
 
 .profile-picture {
-    width: 85%;
-    height: 30%;
+    width: 25%;
+    height: 10%;
     border-radius: 5px;
 }
 
 .name {
     color: whitesmoke;
-    font-size: 20px;
+    font-size: 25px;
     margin-top: 10px !important;
 }
 
 .job {
     color: whitesmoke;
-    font-size: 13px;
+    font-size: 18px;
     margin-top: 10px !important;
 }
 
@@ -100,7 +100,7 @@ body {
     margin-right: 10px;
 }
 
-.linkedIn-button {
+.linkedin-button {
     width:22vw;
     height: 35px;
     margin-left: 2vw;
@@ -115,23 +115,23 @@ body {
     transition: .5s;
 }
 
-.linkedIn-button:hover {
+.linkedin-button:hover {
     transform: translateY(-3px);
     transition: .5s;
     cursor:pointer;
     box-shadow: 0px 0px 30px 0px #81b1ff;
 }
 
-.linkedIn-button:active, .linkedIn-button:focus {
+.linkedin-button:active, .linkedin-button:focus {
     outline: none;
 }
 
-.linkedInIcon {
+.linkedinIcon {
     height: 17px;
     margin-right: 10px;
 }
 
-.about {
+.about, .project, .skills, .interests {
     color: white;
     display: flex;
     flex-direction: column;
@@ -141,38 +141,17 @@ body {
     margin-right: 15px;
 }
 
-.about-heading {
-    font-size: 14px;
+.about-heading, .project-heading, .skills-heading, .interests-heading {
+    font-size: 17px;
     margin:0;
 }
 
-.about-description {
+.about-description, .project-list, .skills-description, .interests-description {
     font-size: 13px;
     margin-top: 5px;
     color: gainsboro;
 }
 
-.interests {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 10px;
-    margin-top: 15px;
-    margin-right: 15px;
-}
-
-.interests-heading {
-    font-size: 14px;
-    margin:0;
-}
-
-.interests-description {
-    font-size: 13px;
-    margin-top: 5px;
-    color: gainsboro;
-    margin-bottom: 20px;
-}
 
 .footer {
     background-color: rgb(55, 74, 74);
